solved the id for the claim eligibility and working on the lapsed refund